TP8-Tavarifun/tests/bad/struct/t00.ml
type pair = { left: int; right: int } ;;
print_int 1.left ;;
